--- a/proj2/Makefile
+++ b/proj2/Makefile
@@ -1,28 +1,24 @@
 CXX = g++
-CXXFLAGS = -std=c++17 -Wall -g -Iproj2/include -I/ucrt64/include
+CXXFLAGS = -std=c++17 -Wall -Iinclude -I/ucrt64/include
 
 LDFLAGS = -L/ucrt64/lib -lgtest -lgtest_main -lwinpthread -lexpat
 
+SRC_DIR = src
+TEST_DIR = testsrc
 OBJ_DIR = obj
 BIN_DIR = bin
 
-SRC = proj2/src/%.cpp
-TESTSRC = proj2/testsrc/%.cpp 
+SRC = $(wildcard $(SRC_DIR)/*.cpp)
+TESTSRC = $(wildcard $(TEST_DIR)/*.cpp)
 OBJS = $(OBJ_DIR)/StringUtils.o $(OBJ_DIR)/StringDataSource.o $(OBJ_DIR)/StringDataSink.o $(OBJ_DIR)/DSVReader.o $(OBJ_DIR)/DSVWriter.o $(OBJ_DIR)/XMLReader.o $(OBJ_DIR)/XMLWriter.o
 TESTOBJS = $(OBJ_DIR)/StringUtilsTest.o $(OBJ_DIR)/StringDataSourceTest.o $(OBJ_DIR)/StringDataSinkTest.o $(OBJ_DIR)/DSVTest.o $(OBJ_DIR)/XMLTest.o
 
-TARGETS = $(BIN_DIR)/teststrutils $(BIN_DIR)/teststrdatasource $(BIN_DIR)/teststrdatasink $(BIN_DIR)/testdsv $(BIN_DIR)/testxml
+TARGET = $(BIN_DIR)/tests
 
-all: test
+test: all
+	./$(TARGET)
 
-test: $(TARGETS)
-	@$(BIN_DIR)/teststrutils
-	@$(BIN_DIR)/teststrdatasource
-	@$(BIN_DIR)/teststrdatasink
-	@$(BIN_DIR)/testdsv
-	@$(BIN_DIR)/testxml
-	@echo "tests worked"
-
+all: $(TARGET)
 
 # make directories
 directories:
@@ -31,35 +27,18 @@ directories:
 	@echo "directories made"
 
 # compile
-
-$(OBJ_DIR)/%.o: proj2/src/%.cpp | directories
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp | directories
 	@$(CXX) $(CXXFLAGS) -c $< -o $@
 	@echo "src compiled"
 	
-$(OBJ_DIR)/%.o: proj2/testsrc/%.cpp | directories
+$(OBJ_DIR)/%.o: $(TEST_DIR)/%.cpp | directories
 	@$(CXX) $(CXXFLAGS) -c $< -o $@
 	@echo "testsrc compiled"
 
-# link object files
-$(BIN_DIR)/teststrutils: $(OBJ_DIR)/StringUtils.o $(OBJ_DIR)/StringUtilsTest.o | directories
+# link tests
+$(TARGET): $(OBJS) $(TESTOBJS) | directories
 	@$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "linked teststrutils"
-
-$(BIN_DIR)/teststrdatasource: $(OBJ_DIR)/StringDataSource.o $(OBJ_DIR)/StringDataSourceTest.o | directories
-	@$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "linked teststrdatasource"
-
-$(BIN_DIR)/teststrdatasink: $(OBJ_DIR)/StringDataSink.o $(OBJ_DIR)/StringDataSinkTest.o | directories
-	@$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "linked teststrdatasink"
-
-$(BIN_DIR)/testdsv: $(OBJ_DIR)/DSVReader.o $(OBJ_DIR)/DSVWriter.o $(OBJ_DIR)/DSVTest.o | directories
-	@$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "linked testdsv"
-
-$(BIN_DIR)/testxml: $(OBJ_DIR)/XMLReader.o $(OBJ_DIR)/XMLWriter.o $(OBJ_DIR)/XMLTest.o | directories
-	@$(CXX) $(CXXFLAGS) $^ -o $@ $(LDFLAGS)
-	@echo "linked testxml"
+	@echo "linked tests"
 
 # clean build 
 clean:
